# simple-codegen

./: .gitignore  Cargo.toml  TODO.md  rustfmt.toml
src/: associated_const.rs  associated_type.rs  block.rs  body.rs  bound.rs  doc.rs  enum.rs  field.rs  fields.rs  formatter.rs  function.rs  generic_parameter.rs  impl.rs  import.rs  item.rs  lib.rs  line_break.rs  lint.rs  module.rs  scope.rs  struct.rs  trait.rs  type.rs  type_alias.rs  type_def.rs  variant.rs  visibility.rs
src/files/: file.rs  library.rs
tests/: enum.rs  function.rs  impl.rs  module.rs  scope.rs  struct.rs  trait.rs  type_alias.rs
